# mylife

./: .gitignore  CLAUDE.MD  GIT_SETUP.md  LICENSE  README.md  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/vault-template/: .gitignore  README.md
src-tauri/vault-template/.obsidian/: daily-notes.json  graph.json  types.json  workspace.json
src-tauri/vault-template/00 - Dashboard/: HOME.md
src-tauri/vault-template/02 - Knowledge/Computer/: Algorithm_complexity.md
src-tauri/vault-template/99 - Meta/System/: General guide.md  Guide to Tags and Links - Note Organization in Obsidian.md  Organizational Methods in Obsidian.md  Practical Usage Guide.md
src-tauri/vault-template/99 - Meta/Templates/: (TEMPLATE) Daily.md  (TEMPLATE) Idea.md  (TEMPLATE) Project.md  (TEMPLATE) Reflection.md  (TEMPLATE) Review.md  (TEMPLATE) Studies.md  (TEMPLATE) Task.md
